--- a/sms-invoker/pom.xml
+++ b/sms-invoker/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>sms-invoker</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-batch</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
