--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,14 @@
                     <target>${target.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <profiles>${app.profiles}</profiles>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
