--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
+
+            <!-- ClickHouse -->
+            <dependency>
+                <groupId>ru.yandex.clickhouse</groupId>
+                <artifactId>clickhouse-jdbc</artifactId>
+                <version>0.3.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
