--- a/apollo-core/pom.xml
+++ b/apollo-core/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>apollo</artifactId>
-        <groupId>com.doutiaotech</groupId>
+        <groupId>com.doutiaotech.apollo</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -11,18 +11,13 @@
     <artifactId>apollo-core</artifactId>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.doutiaotech.apollo</groupId>
+            <artifactId>infrastructure-mysql</artifactId>
         </dependency>
         <dependency>
-            <groupId>ru.yandex.clickhouse</groupId>
-            <artifactId>clickhouse-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+            <groupId>com.doutiaotech.apollo</groupId>
+            <artifactId>infrastructure-clickhouse</artifactId>
         </dependency>
     </dependencies>
 
