--- a/apollo-worker/pom.xml
+++ b/apollo-worker/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>apollo</artifactId>
-        <groupId>com.doutiaotech</groupId>
+        <groupId>com.doutiaotech.apollo</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
