--- a/sms-invoker/pom.xml
+++ b/sms-invoker/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>apollo</artifactId>
-        <groupId>com.doutiaotech</groupId>
+        <groupId>com.doutiaotech.apollo</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -21,9 +20,8 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.doutiaotech</groupId>
+            <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-core</artifactId>
-            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
