--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>apollo</artifactId>
-        <groupId>com.doutiaotech</groupId>
+        <groupId>com.doutiaotech.apollo</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,29 +18,24 @@
 
         <!-- 收到一个应用中启动 -->
         <dependency>
-            <groupId>com.doutiaotech</groupId>
+            <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>api-syncer</artifactId>
-            <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>com.doutiaotech</groupId>
+            <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-core</artifactId>
-            <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>com.doutiaotech</groupId>
+            <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-worker</artifactId>
-            <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>com.doutiaotech</groupId>
+            <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>web-portal</artifactId>
-            <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>com.doutiaotech</groupId>
+            <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>sms-invoker</artifactId>
-            <version>${revision}</version>
         </dependency>
     </dependencies>
     <build>
