--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.doutiaotech.apollo</groupId>
@@ -13,6 +12,7 @@
         <source.version>1.8</source.version>
         <target.version>1.8</target.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <fontend-maven-plugin.version>1.9.1</fontend-maven-plugin.version>
         <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
         <dubbo.version>2.7.8</dubbo.version>
@@ -21,13 +21,15 @@
     </properties>
 
     <modules>
-        <module>api-syncer</module>
-        <module>sms-invoker</module>
-        <module>web-portal</module>
+        <!-- basic module -->
         <module>apollo-core</module>
         <module>infrastructure-mysql</module>
+        <module>infrastructure-clickhouse</module>
         <module>external-dy-api</module>
-        <module>starter</module>
+        <!-- biz modules -->
+        <module>api-syncer</module>
+        <module>web-portal</module>
+        <module>sms-invoker</module>
         <module>apollo-worker</module>
         <module>starter</module>
     </modules>
@@ -152,11 +154,29 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.eirslett</groupId>
+                    <artifactId>frontend-maven-plugin</artifactId>
+                    <version>${fontend-maven-plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>${source.version}</source>
                     <target>${target.version}</target>
@@ -165,7 +185,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
                 <configuration>
                     <profiles>${app.profiles}</profiles>
                 </configuration>
