--- a/external-dy-api/pom.xml
+++ b/external-dy-api/pom.xml
@@ -14,6 +14,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-netflix-archaius</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
