--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>apollo</artifactId>
         <groupId>com.doutiaotech.apollo</groupId>
@@ -23,10 +22,6 @@
         </dependency>
         <dependency>
             <groupId>com.doutiaotech.apollo</groupId>
-            <artifactId>apollo-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-worker</artifactId>
         </dependency>
         <dependency>
@@ -43,7 +38,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
                 <configuration>
                     <executable>true</executable>
                 </configuration>
