mysql clickhouse web module fix bug

--- a/starter/src/main/resources/application.yaml
+++ b/starter/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: apollo-marketing
+  profiles:
+    include:
+      - mysql
+      - clickhouse
+      - web
 logging:
   group:
     apollo: com.doutiaotech.apollo
