--- a/infrastructure-clickhouse/pom.xml
+++ b/infrastructure-clickhouse/pom.xml
@@ -16,8 +16,8 @@
             <artifactId>clickhouse-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
