--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.doutiaotech.apollo</groupId>
@@ -13,10 +14,11 @@
         <target.version>1.8</target.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <fontend-maven-plugin.version>1.9.1</fontend-maven-plugin.version>
-        <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
+        <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
-        <dubbo.version>2.7.8</dubbo.version>
+        <dubbo.version>3.0.1</dubbo.version>
         <guava.version>30.1.1-jre</guava.version>
+        <mybatis-spring-boot.version>2.2.0</mybatis-spring-boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -26,11 +28,12 @@
         <module>infrastructure-mysql</module>
         <module>infrastructure-clickhouse</module>
         <module>external-dy-api</module>
-        <!-- biz modules -->
+        <!-- biz module -->
         <module>api-syncer</module>
         <module>web-portal</module>
         <module>sms-invoker</module>
         <module>apollo-worker</module>
+        <!-- starter module -->
         <module>starter</module>
     </modules>
 
@@ -59,9 +62,11 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-spring-boot-starter</artifactId>
-                <version>${dubbo.version}</version>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot</artifactId>
+                <version>${mybatis-spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!-- commons -->
@@ -86,12 +91,22 @@
             </dependency>
             <dependency>
                 <groupId>com.doutiaotech.apollo</groupId>
-                <artifactId>api-syncer</artifactId>
+                <artifactId>apollo-core</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.doutiaotech.apollo</groupId>
-                <artifactId>apollo-core</artifactId>
+                <artifactId>infrastructure-mysql</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.doutiaotech.apollo</groupId>
+                <artifactId>infrastructure-clickhouse</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.doutiaotech.apollo</groupId>
+                <artifactId>api-syncer</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
@@ -111,12 +126,7 @@
             </dependency>
             <dependency>
                 <groupId>com.doutiaotech.apollo</groupId>
-                <artifactId>infrastructure-mysql</artifactId>
-                <version>${revision}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.doutiaotech.apollo</groupId>
-                <artifactId>infrastructure-clickhouse</artifactId>
+                <artifactId>starter</artifactId>
                 <version>${revision}</version>
             </dependency>
         </dependencies>
@@ -185,9 +195,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <profiles>${app.profiles}</profiles>
-                </configuration>
             </plugin>
         </plugins>
     </build>
