--- a/api-syncer/pom.xml
+++ b/api-syncer/pom.xml
@@ -23,6 +23,10 @@
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>external-dy-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.doutiaotech.apollo</groupId>
+            <artifactId>infrastructure-mysql</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
