--- a/.gitignore
+++ b/.gitignore
@@ -320,3 +320,4 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 .data/
+.logs/
