--- a/web-portal/pom.xml
+++ b/web-portal/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>apollo</artifactId>
         <groupId>com.doutiaotech.apollo</groupId>
@@ -16,7 +17,11 @@
         </dependency>
         <dependency>
             <groupId>com.doutiaotech.apollo</groupId>
-            <artifactId>apollo-core</artifactId>
+            <artifactId>infrastructure-mysql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.doutiaotech.apollo</groupId>
+            <artifactId>infrastructure-clickhouse</artifactId>
         </dependency>
     </dependencies>
 
