--- a/web-portal/pom.xml
+++ b/web-portal/pom.xml
@@ -23,6 +23,10 @@
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>infrastructure-clickhouse</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.doutiaotech.apollo</groupId>
+            <artifactId>apollo-util</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
