--- a/external-dy-api/pom.xml
+++ b/external-dy-api/pom.xml
@@ -22,6 +22,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.doutiaotech.apollo</groupId>
+            <artifactId>apollo-util</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
