--- a/infrastructure-clickhouse/pom.xml
+++ b/infrastructure-clickhouse/pom.xml
@@ -19,6 +19,10 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.doutiaotech.apollo</groupId>
+            <artifactId>apollo-util</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
