--- a/infrastructure-clickhouse/src/main/resources/application-clickhouse.yaml
+++ b/infrastructure-clickhouse/src/main/resources/application-clickhouse.yaml
@@ -4,5 +4,5 @@ clickhouse:
     driverClassName: ru.yandex.clickhouse.ClickHouseDriver
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  configuration:
-    map-underscore-to-camel-case: true
+#  configuration:
+#    map-underscore-to-camel-case: true
