--- a/starter/src/main/resources/application.yaml
+++ b/starter/src/main/resources/application.yaml
@@ -1,10 +1,6 @@
 spring:
   application:
     name: apollo-marketing
-  profiles:
-    include:
-      - mysql
-      - clickhouse
   kafka:
     producer:
       acks: all
@@ -13,6 +9,12 @@ spring:
         enable:
           idempotence: true
       bootstrap-servers: localhost:19092
+    consumer:
+      bootstrap-servers: localhost:19092
+      enable-auto-commit: false
+      fetch-max-wait: 1000
+      auto-offset-reset: earliest
+      fetch-min-size: 512KB
   mvc:
     format:
       date: yyyy-MM-dd
@@ -23,3 +25,37 @@ spring:
       PROPAGATE_TRANSIENT_MARKER: true
     parser:
       IGNORE_UNDEFINED: true
+server:
+  port: 8888
+
+mysql:
+  datasource:
+    jdbcUrl: jdbc:mysql://localhost:3306/apollo
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: apollo
+    password: apollo-passwd
+    type: com.zaxxer.hikari.HikariDataSource
+clickhouse:
+  datasource:
+    jdbcUrl: jdbc:clickhouse://localhost:8123/apollo
+    driverClassName: ru.yandex.clickhouse.ClickHouseDriver
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+#    map-underscore-to-camel-case: true
+
+feign:
+  client:
+    config:
+      default:
+        loggerLevel: BASIC
+
+syncer:
+  trade:
+    corePoolSize: 10
+    maxPoolSize: 10
+    keepAliveSeconds: 60
+    queueCapacity: 100
+    allowCoreThreadTimeOut: true
+    threadNamePrefixSet: true
