--- a/infrastructure-mysql/pom.xml
+++ b/infrastructure-mysql/pom.xml
@@ -24,6 +24,16 @@
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
