--- a/api-syncer/pom.xml
+++ b/api-syncer/pom.xml
@@ -32,6 +32,11 @@
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
