--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
         <dubbo.version>3.0.1</dubbo.version>
         <guava.version>30.1.1-jre</guava.version>
+        <jool-java.version>0.9.14</jool-java.version>
         <mybatis-spring-boot.version>2.2.0</mybatis-spring-boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -74,6 +75,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jooq</groupId>
+                <artifactId>jool-java-8</artifactId>
+                <version>${jool-java.version}</version>
             </dependency>
 
             <!-- ClickHouse -->
