--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,14 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - uses: actions/cache@v1
+      - name: Cache mvn dependencies
+        uses: actions/cache@v2.1.5
+        env:
+          cache-name: mvn-deps
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          path: ~/.m2
+          key: ${{ env.cache-name }}-${{ hashFiles('pom.xml') }}
+          restore-keys: ${{ env.cache-name }}-
       - name: Build with Maven
         run: mvn -B package --file pom.xml -Drevision=${{github.event.inputs.revision}}
       - name: SCP Files
