--- a/infrastructure-mysql/pom.xml
+++ b/infrastructure-mysql/pom.xml
@@ -30,8 +30,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>ch.vorburger.mariaDB4j</groupId>
+            <artifactId>mariaDB4j-springboot</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
