--- a/apollo-worker/pom.xml
+++ b/apollo-worker/pom.xml
@@ -37,8 +37,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>kafka</artifactId>
+            <groupId>com.playtika.testcontainers</groupId>
+            <artifactId>embedded-kafka</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
