--- a/apollo-worker/pom.xml
+++ b/apollo-worker/pom.xml
@@ -43,7 +43,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
