--- a/infrastructure-clickhouse/pom.xml
+++ b/infrastructure-clickhouse/pom.xml
@@ -34,7 +34,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
