--- a/api-syncer/pom.xml
+++ b/api-syncer/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>external-dy-api</artifactId>
         </dependency>
