--- a/apollo-worker/pom.xml
+++ b/apollo-worker/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>spring-boot-starter-batch</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-util</artifactId>
         </dependency>
