--- a/infrastructure-clickhouse/pom.xml
+++ b/infrastructure-clickhouse/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>apollo-util</artifactId>
         </dependency>
