--- a/infrastructure-mysql/pom.xml
+++ b/infrastructure-mysql/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
