--- a/web-portal/pom.xml
+++ b/web-portal/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.doutiaotech.apollo</groupId>
             <artifactId>infrastructure-mysql</artifactId>
         </dependency>
