--- a/.github/workflows/publish-web-api.yml
+++ b/.github/workflows/publish-web-api.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Build the stack
+        run: docker-compose up -d
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
